# qsystem-monitor

./: .gitignore  CMakeLists.txt  README.md
include/: abstractmonitor.h  cpumonitor.h  cpuwidget.h  loadavgmonitor.h  mainwindow.h  memorywidget.h  rammonitor.h  ramwidget.h  uptimemonitor.h  utils.h
include/info/: abstractsysinfo.h  cpuinfo.h  loadavginfo.h  memoryinfo.h  uptimeinfo.h
src/: cpumonitor.cpp  cpuwidget.cpp  loadavgmonitor.cpp  main.cpp  mainwindow.cpp  memorywidget.cpp  rammonitor.cpp  uptimemonitor.cpp
src/info/: cpuinfo.cpp  loadavginfo.cpp  memoryinfo.cpp  uptimeinfo.cpp
